--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -37,13 +37,17 @@
                                 <input type="hidden" name="action" value="add">
                                 <input type="hidden" name="replace" value="<%=!cart || cart.restaurant != restaurant.name ? "true" : "false"%>">
                                 <input type="hidden" name="food_id" value="<%=food._id%>">
-                                <div class="media-body" onclick="document.getElementById('wrapper-form-<%=i%>').submit();">
-                                    <h3 class="mt-0"><%=food.name%> | $<%=food.price.toFixed(2)%> </h3>
-                                    <%=food.description%>
-                                    <div class="food-item-wrapper">
-                                        <h1 class="food-item-text">Add to Cart</h1>
+                                <% if(cart && cart.restaurant != restaurant.name){ %>
+                                    <div class="media-body" data-toggle="modal" data-target="#replaceModal" data-submit="wrapper-form-<%=i%>">
+                                <% } else { %>
+                                    <div class="media-body" onclick="document.getElementById('wrapper-form-<%=i%>').submit();">
+                                <% } %>
+                                        <h3 class="mt-0"><%=food.name%> | $<%=food.price.toFixed(2)%> </h3>
+                                        <%=food.description%>
+                                        <div class="food-item-wrapper">
+                                            <h1 class="food-item-text">Add to Cart</h1>
+                                        </div>
                                     </div>
-                                </div>
                             </form>
                         </li>
                 <% }}; %>
@@ -54,6 +58,32 @@
                 <a role="button" class="btn btn-outline-dark btn-sm ml-1 <% if (page >= Math.ceil(restaurant.foodItems.length / 10)) {%> disabled <% }; %>" href="/<%=restaurant.name%>/menu?p=<%=Number(page)+1%>">Next Page</a>
             </div>
         </div>
+        <div class="modal fade" id="replaceModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h3 class="modal-title">Start a new order?</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        Adding this item will replace your old cart at <b><%=cart?cart.restaurant:"This modal should never appear"%></b> with a new cart at <b><%=restaurant.name%></b>. Do you want to continue?
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success" id="replaceConfirm">Proceed</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+        $('#replaceModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget)
+            // set onClick to submit appropriate hidden form
+            document.getElementById('replaceConfirm').onclick = function(){
+                document.getElementById(button.data('submit')).submit();
+            };
+          })
+        </script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </body>
