--- a/views/StoriesForm.ejs
+++ b/views/StoriesForm.ejs
@@ -1,63 +1,52 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Personal Stories</title>
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<head>
+		<title>Personal Stories</title>
+		<!-- JS, Popper.js, and jQuery (Bootstrap files) -->
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="/stylesheets/storiesForm.css">
+	</head>
 
-<style type="text/css">
-	#ui{
-		background-color: #333;
-		padding:30px;
-		margin-top: 20px;
-		border-radius: 10px;
-	}
-
-	#ui label, h1 {
-		color: #fff;
-	}
-</style>
-
-</head>
-<body>
-	<%- include('./partials/navbar.ejs') %>
-	<div class="container">
-
-		<div class="row">
-
-			<div class="col-lrg-3"></div>
-			<div class="col-lrg-6">
-				<div id="ui">
-					<h1 class="text-center">Personal Stories</h1>
-					<br>
-					<form action="/uploadStory/" method="POST" class="form-group">
-
-						<input class="hidden" type="text" name="restaurantName" value=<%=restaurant%> > </input>
-						<br>
-						<label>Input any stories or personal anecdotes you want displayed </label>
-						<br>
-						<br>
-						<textarea name="storyText" rows="10" cols="155"></textarea>
-						<br>
-						<br>
-
-						<input type="submit" name="submit" value="submit" class="btn btn-primary btn-block btn-lg">
-
-						
-					</form>
-					
-
-				</div>
+	<body>
+		<%- include('./partials/navbar.ejs') %>
+		<div class="container" id="ui">
+			<div class="row mb-2">
+				<h1 class="col text-center">Create a New Post</h1>
 			</div>
-			<div class="col-lrg-3"></div>
-			
+			<form action="/uploadStory" method="POST" enctype="multipart/form-data" class="form-group">
+				<input type="hidden" name="restaurantName" value=<%=restaurant%>>
+					<div class="row justify-content-between mb-4">
+						<div class="col-8">
+							<h6 class="text-center">Write the body of your post here.</h6>
+							<textarea style="width:100%; height:16em;" name="bodyText"></textarea>
+						</div>
+						<div class="col-4 align-self-end">
+							<h6 class="text-center">[Optional] Upload an image to go along with your post.</h6>
+							<img class="mb-2" style="border: 2px solid black; margin: 0 auto; display: block;" id="postImage" src="" alt="No Image Uploaded" onerror="this.onerror=null; this.src='/uploads/no_image.png'">
+							<input style="color:white;" type="file" name="imageLink" id="imageLink" onchange="readURL(this);">
+						</div>
+					</div>
+				<input type="submit" name="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
+			</form>
 		</div>
-		
-	</div>
 
-</body>
+		<!-- CSS only for bootstrap--> 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<script>
+		// this allows image to be previewed before submission
+		function readURL(input) {
+			if (input.files && input.files[0]) {
+				var reader = new FileReader();
+				reader.onload = function (e) {
+					$('#postImage')
+						.attr('src', e.target.result)
+						.width(200)
+						.height(200);
+				};
+				reader.readAsDataURL(input.files[0]);
+			}
+		}
+	</script>
+	</body>
 </html>
